add user.getRoles
