# controllers/permission.js
@@ -2,7 +2,6 @@ var resourceController = require('../utils/resource-controller');
 var models = require('../models');
 
 var PermissionController = resourceController(models.Permission, {
-  platform: models.Platform,
   roles: models.Role
 });
 
